--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -53,7 +53,7 @@ services:
       - media_volume:/usr/src/main/media
     depends_on:
       - backend
-      - frontend
+      - console
     networks:
       - nginx_network
     deploy:
