--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -58,9 +58,9 @@ services:
       - nginx_network
     deploy:
       replicas: 1
-      placement:
-        constraints:
-          - node.role == manager
+      # placement:
+      #   constraints:
+      #     - node.role == manager
       restart_policy:
         condition: on-failure
 
