--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,6 +27,9 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+
+        # Strip the /api prefix before passing to the upstream
+        rewrite ^/api(/.*)$ $1 break;
     }
 
     # Static files
