--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -23,6 +23,7 @@ services:
       update_config:
         parallelism: 1
         delay: 10s
+      pull_policy: always
       restart_policy:
         condition: on-failure
         max_attempts: 3
@@ -38,6 +39,7 @@ services:
       update_config:
         parallelism: 1
         delay: 10s
+      pull_policy: always
       restart_policy:
         condition: on-failure
 
@@ -61,6 +63,7 @@ services:
       # placement:
       #   constraints:
       #     - node.role == manager
+      pull_policy: always
       restart_policy:
         condition: on-failure
 
