added cpu and memory resource allocation and updated nginx config

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,13 +1,19 @@
+# Rate limiting zone
+limit_req_zone $binary_remote_addr zone=api_limit:10m rate=5r/s;
+
+# Client configuration
 client_max_body_size 10M;
+client_body_timeout 60s;
+client_header_timeout 60s;
 
 # Backend upstream
 upstream backend_servers {
     ip_hash;
-    server backend:8000;
+    server backend:8000;   
 }
 
-# Frontend upstream
-upstream frontend_servers {
+# Console upstream
+upstream console_servers {
     ip_hash;
     server console:3000;
 }
@@ -16,10 +22,21 @@ server {
     listen 8000;
     server_name localhost;
 
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-XSS-Protection "1; mode=block";
+    add_header X-Content-Type-Options "nosniff";
+    add_header Referrer-Policy "strict-origin-when-cross-origin";
+
     # API routes
     location /api/ {
+        limit_req zone=api_limit burst=10 nodelay;
+
         proxy_pass http://backend_servers;
+        proxy_set_header Connection "";
+        proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $host;
         proxy_redirect off;
         
@@ -27,6 +44,11 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+
+        # Timeouts
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
 
         # Strip the /api prefix before passing to the upstream
         rewrite ^/api(/.*)$ $1 break;
@@ -36,25 +58,43 @@ server {
     location /static/ {
         autoindex on;
         alias /usr/src/main/static/;
+        expires 7d;
+        add_header Cache-Control "public, no-transform";
     }
 
     # Media files
     location /media/ {
         autoindex on;
         alias /usr/src/main/media/;
+        expires 7d;
+        add_header Cache-Control "public, no-transform";
     }
 
     # Frontend routes (everything else)
     location / {
-        proxy_pass http://frontend_servers;
+        proxy_pass http://console_servers;
+        proxy_set_header Connection "";
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $host;
         proxy_redirect off;
+
 
         # WebSocket support (if needed)
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+
+        # Timeouts
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+    }
+
+    # Health check endpoint
+    location /nginx-health {
+        access_log off;
+        return 200 "healthy\n";
     }
 }
