--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -4,7 +4,7 @@ services:
   backend:
     image: subhomoy/llm-gateway-backend:latest
     command: gunicorn main.wsgi:application --bind 0.0.0.0:8000
-    entrypoint: [ "./entrypoint.sh" ]
+    entrypoint: ["./entrypoint.sh"]
     volumes:
       - static_volume:/usr/src/main/static
       - media_volume:/usr/src/main/media
@@ -26,9 +26,16 @@ services:
       restart_policy:
         condition: on-failure
         max_attempts: 3
+      resources:
+        limits:
+          cpus: "1"
+          memory: 1G
+        reservations:
+          cpus: "0.5"
+          memory: 512M
 
   console:
-    image: subhomoy/llm-gateway-console:latest 
+    image: subhomoy/llm-gateway-console:latest
     networks:
       - nginx_network
     env_file:
@@ -40,6 +47,13 @@ services:
         delay: 10s
       restart_policy:
         condition: on-failure
+      resources:
+        limits:
+          cpus: "0.5"
+          memory: 512M
+        reservations:
+          cpus: "0.25"
+          memory: 256M
 
   nginx:
     image: nginx:alpine
@@ -58,11 +72,15 @@ services:
       - nginx_network
     deploy:
       replicas: 1
-      # placement:
-      #   constraints:
-      #     - node.role == manager
       restart_policy:
         condition: on-failure
+      resources:
+        limits:
+          cpus: "0.2"
+          memory: 128M
+        reservations:
+          cpus: "0.1"
+          memory: 64M
 
 networks:
   nginx_network:
