--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -23,6 +23,7 @@ services:
       update_config:
         parallelism: 1
         delay: 10s
+        order: start-first
       restart_policy:
         condition: on-failure
         max_attempts: 3
@@ -45,6 +46,7 @@ services:
       update_config:
         parallelism: 1
         delay: 10s
+        order: start-first
       restart_policy:
         condition: on-failure
       resources:
