--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -34,6 +34,12 @@ services:
         reservations:
           cpus: "0.5"
           memory: 512M
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/healthz/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
   console:
     image: subhomoy/llm-gateway-console:latest
@@ -56,6 +62,12 @@ services:
         reservations:
           cpus: "0.25"
           memory: 256M
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "http://localhost:3000"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
   nginx:
     image: nginx:alpine
@@ -74,6 +86,10 @@ services:
       - nginx_network
     deploy:
       replicas: 1
+      update_config:
+        parallelism: 1
+        delay: 10s
+        order: stop-first
       restart_policy:
         condition: on-failure
       resources:
@@ -83,6 +99,12 @@ services:
         reservations:
           cpus: "0.1"
           memory: 64M
+    healthcheck:
+      test: ["CMD", "nginx", "-t"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 20s
 
 networks:
   nginx_network:
