--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -32,6 +32,10 @@ server {
     location /api/ {
         limit_req zone=api_limit burst=10 nodelay;
 
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With' always;
+
         proxy_pass http://backend_servers;
         proxy_set_header Connection "";
         proxy_set_header X-Real-IP $remote_addr;
