--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -88,6 +88,9 @@ services:
       - nginx_network
     deploy:
       replicas: 1
+      placement:
+        constraints:
+          - node.role == manager
       update_config:
         parallelism: 1
         delay: 10s
