nginx changes for new domain

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,8 +19,9 @@ upstream console_servers {
 }
 
 server {
-    listen 8000;
-    server_name localhost;
+    listen 80;
+    listen [::]:80;
+    server_name llmgateway.oderna.in;
 
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN";
