--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -4,7 +4,7 @@ services:
   backend:
     image: subhomoy/llm-gateway-backend:latest
     command: gunicorn main.wsgi:application --bind 0.0.0.0:8000
-    entrypoint: ["./entrypoint.sh"]
+    entrypoint: ["sh", "./entrypoint.sh"]
     volumes:
       - static_volume:/usr/src/main/static
       - media_volume:/usr/src/main/media
