--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -2,8 +2,25 @@ version: "3.8"
 
 services:
   backend:
-    image: subhomoy/llm-gateway-backend:latest
+    image: subhomoy/llm-gateway-backend:dev-latest
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.backend.rule=(Host(`llmgateway.oderna.in`) && PathPrefix(`/api`))"
+      - "traefik.http.routers.backend.entrypoints=websecure"
+      - "traefik.http.routers.backend.tls=true"
+      - "traefik.http.routers.backend.tls.certresolver=myresolver"
+      - "traefik.http.services.backend.loadbalancer.server.port=8000"
+      - "traefik.http.middlewares.backend-headers.headers.customresponseheaders.X-Frame-Options=SAMEORIGIN"
+      - "traefik.http.middlewares.backend-headers.headers.customresponseheaders.X-XSS-Protection=1; mode=block"
+      - "traefik.http.middlewares.backend-headers.headers.customresponseheaders.X-Content-Type-Options=nosniff"
+      - "traefik.http.middlewares.backend-rate-limit.ratelimit.average=5"
+      - "traefik.http.middlewares.backend-rate-limit.ratelimit.burst=10"
+      - "traefik.http.middlewares.backend-strip-prefix.stripprefix.prefixes=/api"
+      - "traefik.http.routers.backend.middlewares=backend-headers,backend-rate-limit,backend-strip-prefix"
+      - "com.centurylinklabs.watchtower.enable=true"
     command: gunicorn main.wsgi:application --bind 0.0.0.0:8000
+    expose:
+      - 8000
     entrypoint: ["sh", "./entrypoint.sh"]
     volumes:
       - static_volume:/usr/src/main/static
@@ -17,8 +34,9 @@ services:
       - DATABASE=postgres
       - SECRET_KEY=v6nvsn^*dh5d839)^dp1y2s+3q06o&u^4hm@3msf)50s+^t@1p
     networks:
-      - nginx_network
+      - common_network
     deploy:
+      mode: replicated
       replicas: 1
       update_config:
         parallelism: 1
@@ -43,10 +61,20 @@ services:
 
   console:
     image: subhomoy/llm-gateway-console:latest-${BUILD_TAG}
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.console.rule=Host(`llmgateway.oderna.in`)"
+      - "traefik.http.routers.console.entrypoints=websecure"
+      - "traefik.http.services.console.loadbalancer.server.port=3000"
+      - "traefik.http.routers.console.tls=true"
+      - "traefik.http.routers.console.tls.certresolver=myresolver"
+      - "traefik.http.middlewares.console-headers.headers.customresponseheaders.X-Frame-Options=SAMEORIGIN"
+      - "traefik.http.middlewares.console-headers.headers.customresponseheaders.X-XSS-Protection=1; mode=block"
+      - "traefik.http.middlewares.console-headers.headers.customresponseheaders.X-Content-Type-Options=nosniff"
+      - "traefik.http.routers.console.middlewares=console-headers"
+      - "com.centurylinklabs.watchtower.enable=true"
     networks:
-      - nginx_network
-    # env_file:
-    #   - .envs/.console
+      - common_network
     deploy:
       replicas: 1
       update_config:
@@ -69,54 +97,69 @@ services:
       retries: 3
       start_period: 40s
 
-  nginx:
-    image: nginx:alpine
+  traefik:
+    image: traefik:v3.1
+    command:
+      - "--api.insecure=true"
+      - "--providers.docker"
+      - "--providers.docker.exposedbydefault=false"
+      - "--entryPoints.web.address=:80"
+      - "--entryPoints.web.http.redirections.entrypoint.to=websecure"
+      - "--entryPoints.web.http.redirections.entrypoint.scheme=https"
+      - "--entryPoints.websecure.address=:443"
+      - "--certificatesresolvers.myresolver.acme.tlschallenge=true"
+      - "--certificatesresolvers.myresolver.acme.email=subhomoyrchoudhury@gmail.com"
+      - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
     ports:
-      - published: 80
+      - mode: host
+        protocol: tcp
+        published: 8080
+        target: 8080
+      - mode: host
+        protocol: tcp
+        published: 80
         target: 80
-        mode: host
+      - mode: host
+        protocol: tcp
+        published: 443
+        target: 443
     volumes:
-      - ./nginx/:/etc/nginx/conf.d
-      - static_volume:/usr/src/main/static
-      - media_volume:/usr/src/main/media
-      - ./nginx/wait-for-services.sh:/wait-for-services.sh
-    entrypoint: ["/bin/sh", "/wait-for-services.sh"]
-    depends_on:
-      - backend
-      - console
+      - letsencrypt:/letsencrypt
+      - /var/run/docker.sock:/var/run/docker.sock
     networks:
-      - nginx_network
+      - common_network
     deploy:
       replicas: 1
       placement:
         constraints:
           - node.role == manager
-      update_config:
-        parallelism: 1
-        delay: 10s
-        order: stop-first
       restart_policy:
-        condition: on-failure
-      resources:
-        limits:
-          cpus: "0.2"
-          memory: 128M
-        reservations:
-          cpus: "0.1"
-          memory: 64M
-    healthcheck:
-      test: ["CMD", "nginx", "-t"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 20s
+        condition: any
+
+  watchtower:
+    image: containrrr/watchtower
+    networks:
+      - common_network
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    command:
+      - "--label-enable"
+      - "--interval"
+      - "30"
+      - "--rolling-restart"
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: any
 
 networks:
-  nginx_network:
+  common_network:
     driver: overlay
     attachable: true
 
 volumes:
+  letsencrypt:
+    driver: local
   static_volume:
     driver: local
   media_volume:
