--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -45,13 +45,13 @@ services:
       restart_policy:
         condition: on-failure
         max_attempts: 3
-      resources:
-        limits:
-          cpus: "0.5"
-          memory: 512M
-        reservations:
-          cpus: "0.5"
-          memory: 512M
+      # resources:
+      #   limits:
+      #     cpus: "0.5"
+      #     memory: 512M
+      #   reservations:
+      #     cpus: "0.5"
+      #     memory: 512M
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/healthz/"]
       interval: 30s
@@ -83,13 +83,13 @@ services:
         order: start-first
       restart_policy:
         condition: on-failure
-      resources:
-        limits:
-          cpus: "0.25"
-          memory: 256M
-        reservations:
-          cpus: "0.25"
-          memory: 256M
+      # resources:
+      #   limits:
+      #     cpus: "0.25"
+      #     memory: 256M
+      #   reservations:
+      #     cpus: "0.25"
+      #     memory: 256M
     healthcheck:
       test: ["CMD", "wget", "--spider", "http://localhost:3000"]
       interval: 30s
