--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   backend:
-    image: subhomoy/llm-gateway-backend:dev-latest
+    image: subhomoy/llm-gateway-backend:latest
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.backend.rule=(Host(`llmgateway.oderna.in`) && PathPrefix(`/api`))"
