added cloudflare dns resolver

--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -8,7 +8,7 @@ services:
       - "traefik.http.routers.backend.rule=(Host(`llmgateway.oderna.in`) && PathPrefix(`/api`))"
       - "traefik.http.routers.backend.entrypoints=websecure"
       - "traefik.http.routers.backend.tls=true"
-      - "traefik.http.routers.backend.tls.certresolver=myresolver"
+      - "traefik.http.routers.backend.tls.certresolver=dns-cloudflare"
       - "traefik.http.services.backend.loadbalancer.server.port=8000"
       - "traefik.http.middlewares.backend-headers.headers.customresponseheaders.X-Frame-Options=SAMEORIGIN"
       - "traefik.http.middlewares.backend-headers.headers.customresponseheaders.X-XSS-Protection=1; mode=block"
@@ -67,7 +67,7 @@ services:
       - "traefik.http.routers.console.entrypoints=websecure"
       - "traefik.http.services.console.loadbalancer.server.port=3000"
       - "traefik.http.routers.console.tls=true"
-      - "traefik.http.routers.console.tls.certresolver=myresolver"
+      - "traefik.http.routers.console.tls.certresolver=dns-cloudflare"
       - "traefik.http.middlewares.console-headers.headers.customresponseheaders.X-Frame-Options=SAMEORIGIN"
       - "traefik.http.middlewares.console-headers.headers.customresponseheaders.X-XSS-Protection=1; mode=block"
       - "traefik.http.middlewares.console-headers.headers.customresponseheaders.X-Content-Type-Options=nosniff"
